--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "sample-storybook",
+  "name": "scroll-event-enhancer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "author": "getElementsByName",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/storybook__addon-links": "^3.3.4",
-    "@types/storybook__addon-actions": "^3.4.2",
     "@babel/core": "^7.4.3",
     "@storybook/addon-actions": "^5.0.6",
     "@storybook/addon-info": "^5.0.6",
@@ -24,7 +21,9 @@
     "@storybook/addons": "^5.0.6",
     "@storybook/react": "^5.0.6",
     "@types/jest": "^24.0.11",
+    "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-knobs": "^4.0.5",
+    "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__react": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
@@ -34,6 +33,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "jest": "^24.7.1",
     "prettier": "^1.16.4",
     "react-docgen-typescript-loader": "^3.1.0",
